--- a/pac4.html
+++ b/pac4.html
@@ -26,9 +26,16 @@
                     <a class="English" href="http://www.pac4success.org/">
                         <button>English Version</button>
                     </a>
-
                     <button class="home">Pagina Principal</button>
                     <button class="program">Programa</button>
                     <button class="dist">Centro de Distribucion</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <p> Brindar apoyo y estímulo a jóvenes y adultos jóvenes de entre 13 y 24 años de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutoría. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
+                </div>
+                <div class="col-sm-4">
+                <iframe width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
