--- a/pac4.html
+++ b/pac4.html
@@ -18,24 +18,38 @@
                 <h4>Reducir las Brechas Generacionales a Traves de las Educacion en Prevencion de Riesgos</h4>
             </div>
             <div class="col-sm-2">
-                <button class="donate">Para Donar</button>
+                <a class="btn btn-primary btn-rounded donate">Para Donar</a>
             </div>
             <br>
             <div class="row">
-                <div class="col-sm-12">
-                    <a class="English" href="http://www.pac4success.org/">
-                        <button>English Version</button>
+                <div class="col-sm-12 stripe">
+                    <a class="english" href="http://www.pac4success.org/">
+                        <button id="navigate">English Version</button>
                     </a>
-                    <button class="home">Pagina Principal</button>
-                    <button class="program">Programa</button>
-                    <button class="dist">Centro de Distribucion</button>
+                    <button id="navigate">Pagina Principal</button>
+                    <button id="navigate">Programa</button>
+                    <button id="navigate">Centro de Distribucion</button>
                 </div>
             </div>
-            <div class="row">
+            <br>
+            <div class="row mission">
                 <div class="col-sm-6">
+                    <h2> Nuestra Mision</h2>
                     <p> Brindar apoyo y estímulo a jóvenes y adultos jóvenes de entre 13 y 24 años de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutoría. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
                 </div>
                 <div class="col-sm-4">
-                <iframe width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <hr>
+            <div class="row history">
+                <div class="col-sm-6">
+                    <img class="img-responsive img-rounded" src="assets/images/class.png" alt="classroom">
+                </div>
+                <div class="class-sm-6">
+                <h2> Nuestra Historia </h2>
+                <p>
+                    La Comunidad de Acción de Padres (PAC) fue establecida en 2005 por los padres preocupados por el comportamiento y condición de los jóvenes de hoy. Somos una organización de beneficencia totalmente acreditada 501 (c) 3 que equipa a los adultos jóvenes para la responsabilidad del liderazgo.
+                </p>
                 </div>
             </div>
