--- a/pac4.html
+++ b/pac4.html
@@ -14,11 +14,11 @@
                 <img class="img-responsive logo" src="assets/images/pac4image.png" height="100px" width="100px" alt="pac4success">
             </div>
             <div class="col-sm-8 title">
-                <h1>Communidad de Accion de los Padres Inc.</h1>
+                <h1>Communidad de Acc&iacuteon de los Padres Inc.</h1>
                 <h4>Reducir las Brechas Generacionales a Traves de las Educacion en Prevencion de Riesgos</h4>
             </div>
             <div class="col-sm-2">
-                <a class="btn btn-primary btn-rounded donate">Para Donar</a>
+                <a class="btn btn-primary btn-rounded raised donate">Para Donar</a>
             </div>
             <br>
             <div class="row">
@@ -34,8 +34,8 @@
             <br>
             <div class="row mission">
                 <div class="col-sm-6">
-                    <h2> Nuestra Mision</h2>
-                    <p> Brindar apoyo y estímulo a jóvenes y adultos jóvenes de entre 13 y 24 años de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutoría. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
+                    <h2> Nuestra Mis&iacuteon</h2>
+                    <p> Brindar apoyo y estímulo a j&oacutevenes y adultos j&oacutevenes de entre 13 y 24 años de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutor&iacutea. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
                 </div>
                 <div class="col-sm-4">
                     <iframe width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
@@ -47,9 +47,23 @@
                     <img class="img-responsive img-rounded" src="assets/images/class.png" alt="classroom">
                 </div>
                 <div class="class-sm-6">
-                <h2> Nuestra Historia </h2>
-                <p>
-                    La Comunidad de Acción de Padres (PAC) fue establecida en 2005 por los padres preocupados por el comportamiento y condición de los jóvenes de hoy. Somos una organización de beneficencia totalmente acreditada 501 (c) 3 que equipa a los adultos jóvenes para la responsabilidad del liderazgo.
-                </p>
+                    <h2> Nuestra Histor&iacutea </h2>
+                    <p>
+                        La Comunidad de Acción de Padres (PAC) fue establecida en 2005 por los padres preocupados por el comportamiento y condición de los jóvenes de hoy. Somos una organización de beneficencia totalmente acreditada 501 (c) 3 que equipa a los adultos jóvenes para la responsabilidad del liderazgo.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 bottom">
+                        <div class="col-sm-3" <h8>&#9400 2017 by Parent Action Community</h8>
+                        </div>
+                        <a href="https://www.facebook.com/pac4success/" class="btn-social btn-facebook btn-outline" target="_blank">
+                            <img src="assets/images/face.png" width="30" height="30" alt="Facebook"></a>
+                        <a href="https://twitter.com/pac4success" class="btn-social btn-twitter btn-outline" target="_blank">
+                            <img src="assets/images/tweet.png" width="30" height="30" alt="twitter"></a>
+                        <a href="https://www.instagram.com/pac4success/" class="btn-social btn-twitter btn-outline" target="_blank">
+                            <img src="assets/images/insta.png" width="30" height="30" alt="twitter"></a>
+                       
+                    </div>
                 </div>
             </div>
+        </div>
