used font awsome for icon buttons

--- a/pac4.html
+++ b/pac4.html
@@ -4,6 +4,7 @@
 <head>
     <title>Communidad de Accion de los Padres</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/pac4.css">
 </head>
 
@@ -54,15 +55,19 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 bottom">
-                        <div class="col-sm-3" <h8>&#9400 2017 by Parent Action Community</h8>
+                        <div class="col-sm-3">
+                            <h5>&#9400 2017 by Parent Action Community</h5>
                         </div>
-                        <a href="https://www.facebook.com/pac4success/" class="btn-social btn-facebook btn-outline" target="_blank">
-                            <img src="assets/images/face.png" width="30" height="30" alt="Facebook"></a>
-                        <a href="https://twitter.com/pac4success" class="btn-social btn-twitter btn-outline" target="_blank">
-                            <img src="assets/images/tweet.png" width="30" height="30" alt="twitter"></a>
-                        <a href="https://www.instagram.com/pac4success/" class="btn-social btn-twitter btn-outline" target="_blank">
-                            <img src="assets/images/insta.png" width="30" height="30" alt="twitter"></a>
-                       
+                        <div class="col-sm-3">
+                            <h5>Envíanos un correo electrónico 
+                        <a class="email" target="_top" href="mailto:pack4success@outlook.com">pack4success@outlook.com</a></h5>
+                        </div>
+                        <a href="https://www.facebook.com/pac4success/" class="btn-social  btn-outline fa fa-facebook-square social" target="_blank">
+                        </a>
+                        <a href="https://twitter.com/pac4success" class="btn-social  btn-outline social fa fa-twitter-square" target="about_blank">
+                        </a>
+                        <a href="https://www.instagram.com/pac4success/" class="btn-social  btn-outline social fa fa-instagram" target="_blank">
+                        </a>
                     </div>
                 </div>
             </div>
