donate button linked to donation page

--- a/pac4.html
+++ b/pac4.html
@@ -19,7 +19,7 @@
                 <h4>Reducir las Brechas Generacionales a Traves de las Educacion en Prevencion de Riesgos</h4>
             </div>
             <div class="col-sm-2">
-                <a class="btn btn-primary btn-rounded raised donate">Para Donar</a>
+                <a class="btn btn-primary btn-rounded raised donate" href="https://pac4success.givingfuel.com/spring-forward-pac-2017" target="about_blank">Para Donar</a>
             </div>
             <br>
             <div class="row">
