--- a/pac4.html
+++ b/pac4.html
@@ -39,17 +39,17 @@
                     <p> Brindar apoyo y estímulo a j&oacutevenes y adultos j&oacutevenes de entre 13 y 24 años de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutor&iacutea. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
                 </div>
                 <div class="col-sm-4">
-                    <iframe width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-itme" width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <hr>
             <div class="row history">
                 <div class="col-sm-6">
-                    <img class="img-responsive img-rounded" src="assets/images/class.png" alt="classroom">
+                    <img class="img-responsive img-rounded classroom" width="495" height="320"src="assets/images/class.png" alt="classroom">
                 </div>
-                <div class="class-sm-6">
-                    <h2> Nuestra Histor&iacutea </h2>
-                    <p>
+                <div class="class-sm-3">
+                    <h2 id="history"> Nuestra Histor&iacutea </h2>
+                    <p id="history">
                         La Comunidad de Acción de Padres (PAC) fue establecida en 2005 por los padres preocupados por el comportamiento y condición de los jóvenes de hoy. Somos una organización de beneficencia totalmente acreditada 501 (c) 3 que equipa a los adultos jóvenes para la responsabilidad del liderazgo.
                     </p>
                 </div>
