with buttons and program page

--- a/pac4.html
+++ b/pac4.html
@@ -27,8 +27,10 @@
                     <a class="english" href="http://www.pac4success.org/">
                         <button id="navigate">English Version</button>
                     </a>
-                    <button id="navigate">Pagina Principal</button>
-                    <button id="navigate">Programa</button>
+                    <a class="Principal" href="pac4.html">
+                    <button id="navigate">Pagina Principal</button></a>
+                    <a class="programs" href="html/programs.html">
+                    <button id="navigate">Programa</button></a>S
                     <button id="navigate">Centro de Distribucion</button>
                 </div>
             </div>
