--- a/html/programs.html
+++ b/html/programs.html
@@ -38,7 +38,7 @@
             </div>
             <div class="container">
             <div class="row col-sm-12">
-            <h2>Sabía usted que...</h2>
+            <h2>Sab&iacuta usted que...</h2>
             </div>
             </div>
 
