even more Spanish letters

--- a/html/programs.html
+++ b/html/programs.html
@@ -38,7 +38,7 @@
             </div>
             <div class="container">
             <div class="row col-sm-12">
-            <h2>Sab&iacuta usted que...</h2>
+            <h2>Sab&iacutea usted que...</h2>
             </div>
             </div>
 
@@ -46,14 +46,14 @@
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
                     <h2>
-Los graduados de la preparatoria ganan hasta $150 más por semana que los abandonados. 
+Los graduados de la preparatoria ganan hasta $150 m&aacutes por semana que los abandonados. 
 
 </h2>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
                     <h2>
-Los graduados de secundaria tienen tasas de desempleo mucho más bajas, un 4.7% comparado con el 16% de los que abandonan la escuela secundaria</h2>
+Los graduados de secundaria tienen tasas de desempleo mucho m&aacutes bajas, un 4.7% comparado con el 16% de los que abandonan la escuela secundaria</h2>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
@@ -74,7 +74,7 @@ Los graduados que van a terminar la universidad pueden hacer tanto como $400 má
                 <div class="col-sm-6">
                 <h2>Programa de Diploma</h2>
                 <p>
-Este programa es para cualquier persona, incluyendo adultos, que no ha completado su educación secundaria o un programa de diploma. No solo le instruimos, sino que también le mentoramos a través del proceso para ayudarlo a mantenerse motivado para tener éxito.</p>
+Este programa es para cualquier persona, incluyendo adultos, que no ha completado su educaci&oacuten secundaria o un programa de diploma. No solo le instruimos, sino que también le mentoramos a trav&eacutes del proceso para ayudarlo a mantenerse motivado para tener &eacutexito.</p>
 </div>
                     <a  href="https://sis.ucawd.suny.edu/pls/prod/bwskalog.P_DispLoginNon" target="about_blank">
                         <button class="btn btn-primary btn-rounded raised" id="apply">
@@ -88,7 +88,7 @@ Este programa es para cualquier persona, incluyendo adultos, que no ha completad
                         <h5>&#9400 2017 by Parent Action Community</h5>
                     </div>
                     <div class="col-sm-3">
-                        <h5>Envíanos un correo electrónico 
+                        <h5>Env&iacuteanos un correo electrónico 
                         <a class="email" target="_top" href="mailto:pack4success@outlook.com">pack4success@outlook.com</a></h5>
                     </div>
                     <a href="https://www.facebook.com/pac4success/" class="btn-social  btn-outline fa fa-facebook-square social" target="_blank">
