application button and grad photo

--- a/pac4.html
+++ b/pac4.html
@@ -47,7 +47,7 @@
             <hr>
             <div class="row history">
                 <div class="col-sm-6">
-                    <img class="img-responsive img-rounded classroom" width="495" height="320"src="assets/images/class.png" alt="classroom">
+                    <img class="img-responsive img-rounded classroom" width="495" height="320" src="assets/images/class.png" alt="classroom">
                 </div>
                 <div class="class-sm-3">
                     <h2 id="history"> Nuestra Histor&iacutea </h2>
@@ -64,12 +64,15 @@
                             <h5>Envíanos un correo electrónico 
                         <a class="email" target="_top" href="mailto:pack4success@outlook.com">pack4success@outlook.com</a></h5>
                         </div>
+                        <div class="col-sm-3">
                         <a href="https://www.facebook.com/pac4success/" class="btn-social  btn-outline fa fa-facebook-square social" target="_blank">
                         </a>
                         <a href="https://twitter.com/pac4success" class="btn-social  btn-outline social fa fa-twitter-square" target="about_blank">
                         </a>
                         <a href="https://www.instagram.com/pac4success/" class="btn-social  btn-outline social fa fa-instagram" target="_blank">
                         </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
