--- a/html/programs.html
+++ b/html/programs.html
@@ -36,12 +36,9 @@
                     <button id="navigate">Centro de Distribucion</button>
                 </div>
             </div>
-            <div class="container">
             <div class="row col-sm-12">
-            <h2>Sab&iacutea usted que...</h2>
+                <h2>Sab&iacutea usted que...</h2>
             </div>
-            </div>
-
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
@@ -60,8 +57,6 @@ Los graduados de secundaria tienen tasas de desempleo mucho m&aacutes bajas, un 
                     <h2>
 Los graduados que van a terminar la universidad pueden hacer tanto como $400 más por semana que los abandonos</h2>
                 </div>
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
             <br>
             <div style="text-align:center">
@@ -69,14 +64,15 @@ Los graduados que van a terminar la universidad pueden hacer tanto como $400 má
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-            <div class="container justify-content-center">
-                <div class="row justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-sm-6">
-                <h2>Programa de Diploma</h2>
-                <p>
-Este programa es para cualquier persona, incluyendo adultos, que no ha completado su educaci&oacuten secundaria o un programa de diploma. No solo le instruimos, sino que también le mentoramos a trav&eacutes del proceso para ayudarlo a mantenerse motivado para tener &eacutexito.</p>
-</div>
-                    <a  href="https://sis.ucawd.suny.edu/pls/prod/bwskalog.P_DispLoginNon" target="about_blank">
+                    <img class="img-responsive img-rounded classroom" width="495" height="320" src="../assets/images/grad.png">
+                </div>
+                <div class="col-sm-6">
+                    <h2>Programa de Diploma</h2>
+                    <p>
+                        Este programa es para cualquier persona, incluyendo adultos, que no ha completado su educaci&oacuten secundaria o un programa de diploma. No solo le instruimos, sino que también le mentoramos a trav&eacutes del proceso para ayudarlo a mantenerse motivado para tener &eacutexito.</p>
+                    <a href="https://sis.ucawd.suny.edu/pls/prod/bwskalog.P_DispLoginNon" target="about_blank">
                         <button class="btn btn-primary btn-rounded raised" id="apply">
                             Haga clic para aplicar</button>
                     </a>
