still finding bad letters

--- a/pac4.html
+++ b/pac4.html
@@ -38,7 +38,7 @@
             <div class="row mission">
                 <div class="col-sm-6">
                     <h2> Nuestra Mis&iacuteon</h2>
-                    <p> Brindar apoyo y estímulo a j&oacutevenes y adultos j&oacutevenes de entre 13 y 24 años de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutor&iacutea. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
+                    <p> Brindar apoyo y estímulo a j&oacutevenes y adultos j&oacutevenes de entre 13 y 24 a&nacuteos de edad, en Amityville y sus alrededores. Nuestro centro de atención se centra en la educación y la tutor&iacutea. Proporcionamos a las madres adolescentes artículos y habilidades esenciales que les permite volver a la pista con su educación y ser independientes</p>
                 </div>
                 <div class="col-sm-4">
                     <iframe class="embed-responsive-itme" width="395" height="220" src="https://www.youtube.com/embed/N-wmch4pCjA" frameborder="0" allowfullscreen></iframe>
